# argon2-gpu

./: .gitignore  .gitmodules  CMakeLists.txt
data/kernels/: argon2_kernel.cl
include/argon2-gpu-common/: argon2params.h
include/argon2-opencl/: kernelrunner.h  processingunit.h  programcontext.h
include/commandline/: argumenthandlers.h  commandlineparser.h
lib/argon2-gpu-common/: argon2params.cpp  blake2b.cpp  blake2b.h
lib/argon2-opencl/: kernelloader.cpp  kernelrunner.cpp  processingunit.cpp  programcontext.cpp
src/argon2-hash/: main.cpp
